<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:padding="30dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_cari_rumah_sakit"
        android:background="@drawable/round_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:text="@string/cari"
        android:textSize="26sp"
        android:layout_marginBottom="20dp"
        android:textAllCaps="false"/>
    <LinearLayout
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/daftar_rumah_sakit"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/colorPrimary"
            android:layout_width="2dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/tentang_aplikasi"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:text="@string/_2017_stmik_global"
        android:padding="3dp"
        android:layout_marginTop="80dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
